[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="Pages" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = 48.0
margin_right = -48.0
margin_bottom = -48.0

[node name="Main" type="Control" parent="Pages"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Main"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Pages/Main/VBoxContainer"]
margin_right = 1184.0
margin_bottom = 128.0
custom_constants/separation = 16

[node name="icon" type="TextureRect" parent="Pages/Main/VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 3 )
expand = true

[node name="Title" type="Label" parent="Pages/Main/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_top = 41.0
margin_right = 1184.0
margin_bottom = 86.0
size_flags_horizontal = 3
text = "Game title"

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Main/VBoxContainer"]
margin_top = 132.0
margin_right = 240.0
margin_bottom = 624.0
size_flags_horizontal = 0
size_flags_vertical = 3
alignment = 2

[node name="BtnPlay" type="Button" parent="Pages/Main/VBoxContainer/VBoxContainer"]
margin_top = 296.0
margin_right = 240.0
margin_bottom = 392.0
rect_min_size = Vector2( 240, 96 )
text = "_Start"

[node name="BtnCredits" type="Button" parent="Pages/Main/VBoxContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 240.0
margin_bottom = 492.0
rect_min_size = Vector2( 240, 96 )
text = "_Credits"

[node name="Credits" type="Control" parent="Pages"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pages/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PageTitle" type="Label" parent="Pages/Credits/VBoxContainer"]
margin_right = 1184.0
margin_bottom = 45.0
text = "_Credits"
align = 1

[node name="CreditsText" type="RichTextLabel" parent="Pages/Credits/VBoxContainer"]
margin_top = 49.0
margin_right = 1184.0
margin_bottom = 524.0
size_flags_vertical = 3
text = "	Alec Acosta
-Menu template"

[node name="BtnBack" type="Button" parent="Pages/Credits/VBoxContainer"]
margin_top = 528.0
margin_right = 240.0
margin_bottom = 624.0
rect_min_size = Vector2( 240, 96 )
size_flags_horizontal = 0
text = "_Back"

[connection signal="pressed" from="Pages/Main/VBoxContainer/VBoxContainer/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="Pages/Main/VBoxContainer/VBoxContainer/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="Pages/Credits/VBoxContainer/BtnBack" to="." method="_on_BtnBack_pressed"]
